--- a/index.html
+++ b/index.html
@@ -1,21 +1,75 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>chychiang</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
+    integrity="sha384-9/D4ECZvKMVEJ9Bhr3ZnUAF+Ahlagp1cyPC7h5yDlZdXs4DQ/vRftzfd+2uFUuqS"
+    crossorigin="anonymous"></script>
+  <title>chychiang</title>
+</head>
+
+<body>
+  <div class="container-fluid m-0 p-4">
+    <div class="jumbotron-fluid p-4">
+      <h1 class="font-weight-bold title">Hey, Benjamin Here.</h1>
+      <p>Cheng-Yu Chiang's Personal Website</p>
+      <div class="socials">
+        <a href="mailto:bechia9207@gmail.com"><i class="fas fa-paper-plane fa-2x"></i></a>
+        <a href="https://github.com/chychiang"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/chengyuchiang/"><i class="fab fa-linkedin fa-2x"></i></a>
+      </div>
+    </div>
+    <div class="container-fluid p-4 mycard">
+      <h2>About me</h2>
+      <p class="p-0 m-0">I am a passionate 3rd year electrical engineer student studying at UCSD.</p>
+    </div>
+    <hr class="p-0 m-0">
+
+    <div class="container-fluid p-4 mycard">
+      <h2>Education</h2>
+    </div>
+    <hr class="p-0 m-0">
+
+    <div class="container-fluid p-4 mycard">
+      <h2>Work Experience</h2>
+    </div>
+    <hr class="p-0 m-0">
+
+    <div class="container-fluid p-4 mycard">
+      <h2>Skills</h2>
+    </div>
+    <hr class="p-0 m-0">
+    <div class="container-fluid p-4 mycard">
+      <h2>Projects</h2>
+    </div>
+    <hr class="p-0 m-0">
+    <div class="container-fluid p-4 mycard">
+      <h2>Learn more about me</h2>
+      <a href="mailto:bechia9207@gmail.com">bechia9207@gmail.com</a>
+      <a href="mailto:bechia9207@gmail.com"><i class="fas fa-paper-plane fa-2x"></i></a>
+      <a href="https://github.com/chychiang"><i class="fab fa-github fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/chengyuchiang/"><i class="fab fa-linkedin fa-2x"></i></a>
+    </div>
+  </div>
 
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  </body>
+
+
+  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
