Adjusted responsive text paramaters

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="container-fluid m-0 p-4">
     <div class="jumbotron-fluid p-4">
-      <h1 class="font-weight-bold title">Hey, Benjamin Here.</h1>
+      <h1 class="display-4 font-weight-bold">Hey, Benjamin Here.</h1>
       <p>Cheng-Yu Chiang's Personal Website</p>
       <div class="socials">
         <a href="mailto:bechia9207@gmail.com"><i class="fas fa-paper-plane fa-2x"></i></a>
