Added rounded profile picture

--- a/index.html
+++ b/index.html
@@ -22,41 +22,61 @@
 </head>
 
 <body>
-  <div class="container-fluid m-0 p-4">
-    <div class="jumbotron-fluid p-4">
-      <h1 class="display-4 font-weight-bold">Hey, Benjamin Here.</h1>
-      <p>Cheng-Yu Chiang's Personal Website</p>
-      <div class="socials">
-        <a href="mailto:bechia9207@gmail.com"><i class="fas fa-paper-plane fa-2x"></i></a>
-        <a href="https://github.com/chychiang"><i class="fab fa-github fa-2x"></i></a>
-        <a href="https://www.linkedin.com/in/chengyuchiang/"><i class="fab fa-linkedin fa-2x"></i></a>
+  <div class="container-fluid m-0">
+    <div class="jumbotron-fluid pt-4 px-4">
+      <div class="row">
+        <div class="col-10 p-0">
+          <h1 class="display-4 font-weight-bold">Hey, Benjamin Here.</h1>
+          <h5>- Former RF Engineering Intern @<a href="https://www.zebra.com/us/en.html" target="_blank">Zebra
+              Technologies</a></h5>
+          <h5>- Undergraduate Electrical Engineering Junior @<a href="https://ucsd.edu/" target="_blank">UCSD</a></h5>
+          <h5>- Due to covid-19, I am currently a visiting student @<a href="https://www.nctu.edu.tw/en"
+              target="_blank">NCTU, Taiwan</a></h5>
+          <h5>- But most importantly, a cat enthusiast :)</h5>
+          <div class="socials py-2">
+            <a href="mailto:bechia9207@gmail.com"><i class="fas fa-paper-plane fa-2x"></i></a>
+            <a href="https://github.com/chychiang"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/chengyuchiang/"><i class="fab fa-linkedin fa-2x"></i></a>
+          </div>
+        </div>
+        <div class="col-2 p-0">
+          <img class="align-middle" id="me" src="profilepic.jpeg" alt="bruh">
+        </div>
       </div>
     </div>
-    <div class="container-fluid p-4 mycard">
-      <h2>About me</h2>
-      <p class="p-0 m-0">I am a passionate 3rd year electrical engineer student studying at UCSD.</p>
+    <!-- <div class="container-fluid p-4 mycard">
+      <h2>Whoami</h2>
+      <p class="p-0 m-0">I am a passionate 3rd year electrical engineering student studying at UCSD.</p>
     </div>
-    <hr class="p-0 m-0">
-
+    <hr class="p-0 m-0"> -->
+    <!-- 
     <div class="container-fluid p-4 mycard">
       <h2>Education</h2>
+      <div class="row">
+        <div class="col-8">
+          <h6>University of California, San Diego</h6>
+        </div>
+        <div class="col-4 text-right">Expected Graudation: 2022</div>
+      </div>
+    </div>
+    <hr class="p-0 m-0"> -->
+
+    <div class="container-fluid py-4 mycard">
+      <h2>My journey</h2>
     </div>
     <hr class="p-0 m-0">
 
-    <div class="container-fluid p-4 mycard">
-      <h2>Work Experience</h2>
-    </div>
-    <hr class="p-0 m-0">
-
-    <div class="container-fluid p-4 mycard">
+    <div class="container-fluid py-4 mycard">
       <h2>Skills</h2>
     </div>
     <hr class="p-0 m-0">
-    <div class="container-fluid p-4 mycard">
+
+    <div class="container-fluid py-4 mycard">
       <h2>Projects</h2>
     </div>
     <hr class="p-0 m-0">
-    <div class="container-fluid p-4 mycard">
+
+    <div class="container-fluid py-4 mycard">
       <h2>Learn more about me</h2>
       <a href="mailto:bechia9207@gmail.com">bechia9207@gmail.com</a>
       <a href="mailto:bechia9207@gmail.com"><i class="fas fa-paper-plane fa-2x"></i></a>
