--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <a href="https://www.linkedin.com/in/chengyuchiang/"><i class="fab fa-linkedin fa-2x"></i></a>
           </div>
         </div>
-        <div class="col-2 p-0">
+        <!-- <div class="col-2 p-0">
           <img class="align-middle" id="me" src="profilepic.jpeg" alt="bruh">
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- <div class="container-fluid p-4 mycard">
